tests/expectations/compiler/constructor/empty_custom_constructor_fail.out
Error [ESAZ0374012]: The `@custom` constructor has no statements after dead code elimination.
    --> compiler-test:5:5
     |
   5 |     @custom
     |     ^^^^^^^
   6 |     constructor() {
     |     ^^^^^^^^^^^^^^^
   7 |         let x = self.program_owner;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   8 |     }
     |     ^
     |
     = Add a non-trivial implementation
